# tui_player

./: .gitignore  Cargo.toml  README.md
.github/: FUNDING.yml
core/: Cargo.toml
core/examples/: simple_kitty.rs  simple_player.rs  youtube_player.rs
core/src/: lib.rs  media.rs  render.rs  video.rs
core/src/media/: local.rs  youtube.rs
core/src/render/: gpu.rs  tests.rs
core/src/render/shaders/: resize.wgsl
core/src/video/: decoder.rs  frame.rs
player/: Cargo.toml
player/src/: app.rs  main.rs
player/src/commands/: mod.rs
player/src/ui/: app.rs  components.rs  mod.rs
src/: app.rs  events.rs
src/commands/: mod.rs
src/ui/: mod.rs
