[package]
name = "player"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
anyhow = "1.0.98"
clap = { workspace = true, features = ["derive"] }
core = { path = "../core" }
crossterm = { version = "0.29.0", features = ["event-stream"] }
dirs = "5.0.1"
env_logger = "0.11.8"
log = "0.4.27"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
tokio = { version = "1.45.1", features = ["full"] }
directories = "5.0.1"
fuzzy-matcher = "0.3.7"
notify = "6.1.1"

tui-widget-list = "0.5.0"
once_cell = "1.21.3"
