[package]
name = "core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
bytemuck = { version = "1.23.0", features = ["derive", "extern_crate_std"] }
clap = { workspace = true }
crossterm = "0.29.0"
env_logger = "0.11.8"
ffmpeg-next = "7.1.0"
futures = { version = "0.3.30", features = ["std", "thread-pool"] }
futures-intrusive = "0.5.0"
image = "0.25.6"
itoa = "1.0.9"
kitty_image = "0.1.0"
log = "0.4.27"
once_cell = "1.21.3"
parking_lot = { version = "0.12.1", features = ["deadlock_detection"] }
pollster = { version = "0.3.0", features = ["macro"] }
rasteroid = "0.1.5"
reqwest = { version = "0.12.15", features = ["json"] }
rayon = "1.8"
serde = { version = "1.0.219", features = ["derive"] }
stdsimd = { package = "stdsimd", version = "0.1", optional = true }
tempfile = "3.20.0"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
viuer = "0.9.1"
wgpu = "25.0.2"
youtube_dl = { version = "0.10.0", features = ["downloader-rustls-tls"] }
async-std = "1.12.0"
shared-mutex = "0.3"
rodio = "0.17"
